<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackgroundLogin"
    android:orientation="vertical"
    android:weightSum="2">

    <!-- top -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/background_login"
        android:scaleType="fitXY"
        android:layout_centerInParent="true"/>

    <!-- center -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:gravity="center"
        android:focusableInTouchMode="true"
        android:paddingLeft="@dimen/padding_global"
        android:paddingRight="@dimen/padding_global">

        <!-- email -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:hint="@string/text_username"
                android:textSize="20dp"
                android:maxLines="1"
                android:inputType="text"
                android:theme="@style/EditText"
                app:backgroundTint="@color/colorEditTextSign" />

        </android.support.design.widget.TextInputLayout>

        <!-- password -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:maxLines="1"
                    android:inputType="text|textPassword"
                    android:hint="@string/text_password"
                    android:textSize="20dp"
                    android:theme="@style/EditText"
                    app:backgroundTint="@color/colorEditTextSign" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/imageViewTogglePassword"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:src="@drawable/ic_hide_password"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@id/textInputLayoutPassword"/>

        </RelativeLayout>

    </LinearLayout>

    <!-- bottom -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_global"
        android:paddingRight="@dimen/padding_global"
        android:gravity="top">

        <!-- submit -->
        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="195dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="21dp"
            android:background="@color/colorButton"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/text_register_button"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>