<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".view.FilterActivity">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- submit -->
        <TextView
            android:id="@+id/textViewSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButtonGreen"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/text_apply_filters"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance_FontPathOpenSansBold"
            android:layout_alignParentBottom="true"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:layout_above="@id/textViewSubmit">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- raggio di ricerca -->

                <!-- tipo di evento -->
                <android.support.v7.widget.CardView
                    app:cardCornerRadius="0dp"
                    app:cardElevation="1dp"
                    app:cardUseCompatPadding="false"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"

                    android:layout_marginTop="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_marginBottom="10dp"
                                android:layout_weight="1"
                                android:background="#dddddd"
                                android:gravity="center|left"
                                android:padding="@dimen/padding_global_half"
                                android:text="Tipo di evento"
                                android:textAppearance="@style/TextAppearance_FontPathOpenSansBold"
                                android:textColor="@android:color/black"
                                android:textSize="20dp" />
                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/radioAdType"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="@dimen/padding_global_half">

                            <RadioButton
                                android:id="@+id/radioAll"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/text_all" />

                            <RadioButton
                                android:id="@+id/radioFree"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_free" />

                            <RadioButton
                                android:id="@+id/radioPaid"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_paid" />


                        </RadioGroup>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!-- data -->

                <android.support.v7.widget.CardView
                    android:id="@+id/cardData"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="1dp"
                    app:cardUseCompatPadding="false"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:background="#dddddd"
                            android:gravity="center|left"
                            android:padding="@dimen/padding_global_half"
                            android:text="Data"
                            android:textAppearance="@style/TextAppearance_FontPathOpenSansBold"
                            android:textColor="@android:color/black"
                            android:textSize="20dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/giorno"
                                android:layout_width="80dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="21"
                                android:textColor="#4dbba6"
                                android:textSize="20dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/mese"
                                android:layout_width="80dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="02"
                                android:textColor="#4dbba6"
                                android:textSize="20dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/anno"
                                android:layout_width="80dp"
                                android:layout_height="60dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="2018"
                                android:textColor="#4dbba6"
                                android:textSize="20dp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!-- categoria -->

                <android.support.v7.widget.CardView
                    app:cardCornerRadius="0dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="false"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginBottom="10dp"
                            android:background="#dddddd"
                            android:gravity="center|left"
                            android:padding="@dimen/padding_global_half"
                            android:text="Categoria"
                            android:textAppearance="@style/TextAppearance_FontPathOpenSansBold"
                            android:textColor="@android:color/black"
                            android:textSize="20dp" />

                        <Spinner
                            android:id="@+id/spinnerCategory"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_component"
                            android:paddingLeft="10dp"
                            android:textSize="25dp" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardCitta"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="1dp"
                    app:cardUseCompatPadding="false"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp">

                    <!-- city -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:background="#dddddd"
                            android:gravity="center|left"
                            android:padding="@dimen/padding_global_half"
                            android:text="@string/text_city"
                            android:textAppearance="@style/TextAppearance_FontPathOpenSansBold"
                            android:textColor="@android:color/black"
                            android:textSize="20dp" />

                        <Spinner
                            android:id="@+id/spinnerCity"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_component" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</LinearLayout>